# cnn-aspp-wildfire-spread

./: .gitignore  README.md  elaborative README.md  environment-wildfire.yml  model_card.yaml  pyproject.toml  pytest.ini
cnn_aspp/cli/: __main__.py  eval_phase7.py  eval_test.py  heuristic_threshold.py  predict_mask.py  reproduce_run.py  snapshot_run.py  sweep_thresh.py  train.py  train_aspp_tiny.py  xai_gradcam.py  xai_r2.py
cnn_aspp/conf/: train.yaml  train_aspp_tiny.yaml
cnn_aspp/conf/dataset/: default.yaml  micro.yaml  ndws.yaml
cnn_aspp/conf/model/: aspp_tiny.yaml  cnn_aspp.yaml  default.yaml  tiny.yaml
cnn_aspp/conf/task/: default.yaml  tiny_overfit.yaml  train.yaml
cnn_aspp/data/: README.md  __init__.py  channels.json  class_balance.json  class_balance.py  convert_ndws_tfrecord.py  dataload_smoke.py  datamodule.py  datamodule_ndws.py  make_microset.py  ndws_dataset.py  plot_tile.py  stats.json  validate_dataset.py
cnn_aspp/models/: __init__.py  aspp_tiny.py  losses.py  plain_cnn.py  tiny_cnn.py
cnn_aspp/tasks/: __init__.py  seg_task.py  seg_train.py  train.py  train_plain_cnn.py  train_tiny.py
cnn_aspp/utils/: __init__.py  seed.py
cnn_aspp/xai/: __init__.py  gradcam.py
conf/dataset/: micro.yaml
data/micro/train/: EVTUNK_000215.npz  EVTUNK_001505.npz  EVTUNK_002353.npz  EVTUNK_008937.npz  EVTUNK_009661.npz  EVTUNK_011037.npz  EVTUNK_011331.npz  EVTUNK_012002.npz
scripts/: scan_thresh.sh
tests/: test_aspp_tiny.py  test_dataset.py  test_forward.py  test_imports.py  test_metrics.py  test_tiny_shapes.py  test_training.py
(+4 files in other folders)
